# Canalize

./: .gitignore  CHANGELOG.md  JOURNEYMAP_FIX.md  LICENSE  PLUGIN_MANAGER_DESIGN.md  PLUGIN_MANAGER_IMPLEMENTATION.md  README.md  TERRAIN_ALGORITHM.md  build.gradle  gradle.properties
sdk/: CMakeLists.txt  README.md
sdk/include/: CanalizeAPI.h  CanalizeSDK.h  Carver.h  MathUtil.h  NativeLog.h  NativeStatus.h  WorldLoader.h
sdk/include/canalize/api/: JNIHelper.h
sdk/include/canalize/block/: BlockState.h
sdk/include/canalize/entity/: Entity.h
sdk/include/canalize/item/: ItemStack.h
sdk/include/canalize/render/: RenderSystem.h
sdk/include/canalize/world/: BlockPos.h  ChunkAccess.h
sdk/plugins/TerrainOverhaul/: CMakeLists.txt
sdk/plugins/TerrainOverhaul/include/: FastNoiseLite.h
sdk/plugins/TerrainOverhaul/src/: OverhaulPlugin.cpp
src/cpp/: CMakeLists.txt  COMPILE_INSTRUCTIONS.txt  CanalizeSDKConfig.cmake.in  build_native.bat  build_native.sh  debug_mingw.bat  jni.cpp
src/cpp/include/: CanalizeSDK.h  Decorator.h  NativeLog.h  NativeStatus.h  PluginLoader.h  PluginSystem.h  TerrainGen.h  WorldLoader.h
src/cpp/include/canalize/api/: JNIHelper.h
src/cpp/include/canalize/config/: Config.h
src/cpp/include/canalize/entity/: EntityType.h
src/cpp/include/canalize/forge/: ChunkEvents.h  EventBus.h
src/cpp/include/canalize/gui/: Screen.h
src/cpp/include/canalize/item/: Item.h  Items.h
src/cpp/include/canalize/network/: Packet.h
src/cpp/include/canalize/world/: ChunkAccess.h
src/cpp/src/: BlockState.cpp  Carver.cpp  ChunkAccess.cpp  Config.cpp  Decorator.cpp  Entity.cpp  EntityType.cpp  EventBus.cpp  GUI.cpp  ItemStack.cpp  Items.cpp  JNIHelper.cpp  NativeLog.cpp  NativeStatus.cpp  Network.cpp  PluginLoader.cpp  PluginSystem.cpp  Render.cpp  TerrainGen.cpp  WorldLoader.cpp
src/main/java/cn/sanrol/canalize/: Canalize.java  CanalizeClient.java  CommandHandler.java  Config.java  TestDim.java
src/main/java/cn/sanrol/canalize/client/: ScreenEventHandler.java
src/main/java/cn/sanrol/canalize/client/gui/: AbstractPluginTab.java  PluginManagerScreen.java
src/main/java/cn/sanrol/canalize/client/gui/tabs/: AdvancedTab.java  ConfigTab.java  DetailTab.java  LogsTab.java  PluginsTab.java  StatsTab.java
src/main/java/cn/sanrol/canalize/mixin/: MixinMinecraftJourneyMapFix.java  MixinMinecraftServer.java  MixinWorldPresets.java
src/main/java/cn/sanrol/canalize/world/: NativeBiomeSource.java  NativeChunkGenerator.java  NativeQueryBridge.java  WorldSetup.java
src/main/resources/: canalize.mixins.json
src/main/resources/assets/canalize/lang/: en_us.json
src/main/resources/data/minecraft/dimension/: overworld.json
src/main/resources/data/minecraft/dimension_type/: overworld.json
src/main/resources/natives/: plugins.list
